	- ADDED: rlgl Textures management functions
	- ADDED: Texture and RenderTexture can be given as tables
	- ADDED: Camera2D and Camera3D can be given as tables
	- ADDED: Camera2D and Camera3D can be given as tables
	- ADDED: rlgl New defines
	- ADDED: rlgl Textures state functions
	- ADDED: rlgl Some Render batch management functions
	- ADDED: rlgl Matrix operations functions

Detailed changes:
	- FIXED: uluaGetRay was looking for integers instead of tables
	- REMOVED: SetCameraMode
	- REMOVED: SetCameraPanControl
	- REMOVED: SetCameraAltControl
	- REMOVED: SetCameraSmoothZoomControl
	- REMOVED: SetCameraMoveControls
	- REMOVED: DrawTextureTiled
	- REMOVED: DrawTexturePoly
	- REMOVED: DrawCubeTexture
	- REMOVED: PlaySoundMulti
	- REMOVED: StopSoundMulti
	- REMOVED: GetSoundsPlaying
	- CHANGED: UpdateCamera3D now takes int mode parameter. Same as UpdateCamera in raylib
	- ADDED: UpdateCamera3DPro. Same as UpdateCameraPro in raylib
	- ADDED: BLEND_CUSTOM_SEPARATE
	- ADDED: Vector2LineAngle
	- ADDED: CheckCollisionPointPoly
	- ADDED: ColorTint
	- ADDED: ColorBrightness
	- ADDED: ColorContrast
	- ADDED: GenImagePerlinNoise
	- ADDED: GenImageText
	- CHANGED: DrawLineStrip no longer require pointsCount
	- CHANGED: DrawTriangleFan no longer require pointsCount
	- CHANGED: DrawTriangleStrip no longer require pointsCount
	- FIXED: LoadShaderFromMemory
	- ADDED: GetCamera3DForward
	- ADDED: GetCamera3DUpNormalized
	- ADDED: GetCamera3DRight
	- ADDED: Camera3DMoveForward
	- ADDED: Camera3DMoveUp
	- ADDED: Camera3DMoveRight
	- ADDED: Camera3DMoveToTarget
	- ADDED: Camera3DYaw
	- ADDED: Camera3DPitch
	- ADDED: Camera3DRoll
	- ADDED: GetCamera3DViewMatrix
	- ADDED: GetCamera3DProjectionMatrix
	- ADDED: glBlitFramebuffer
	- ADDED: GuiGetFont
	- FIXED: GuiScrollPanel
	- ADDED: UpdateMusicStream
	- ADDED: SetMusicLooping
	- ADDED: GetMusicLooping
	- ADDED: DrawCapsule and DrawCapsuleWires
	- ADDED: Free Camera3D example
	- REMOVED: SetTextureSource
	- REMOVED: GetTextureSource